--- a/.eslintrc
+++ b/.eslintrc
@@ -20,8 +20,9 @@ rules:
   react/prop-types: 0
   react/forbid-prop-types: 0
   react/prefer-stateless-function: 0
+  import/no-unresolved: 0
   import/prefer-default-export: 0
-  import/no-extraneous-dependencies: [error, { devDependencies: true }]
+  import/no-extraneous-dependencies: 0
 
 parserOptions:
   ecmaVersion: 2017
