--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "faker": "^4.1.0",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "yargs": "^8.0.2"
   }
