--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev-server": "NODE_ENV=development nodemon ./server.js",
     "prod": "NODE_ENV=production webpack --progress --colors",
     "prod-server": "NODE_ENV=production pm2 start ./server.js -i max",
-    "lint": "eslint **/*.js **/*.jsx"
+    "lint": "eslint **/*.js **/*.jsx",
+    "upgrade:eslint": "make upgrade_eslint"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.3",
