--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev-server": "NODE_ENV=development nodemon ./server.js",
     "prod": "NODE_ENV=production webpack --progress --colors",
     "prod-server": "NODE_ENV=production pm2 start ./server.js -i max",
-    "lint": "eslint **/*.js **/*.jsx",
+    "lint": "eslint **/*.js",
     "upgrade:eslint": "make upgrade_eslint"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.3",
+    "babel-eslint": "^8.0.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-runtime": "^6.23.0",
