--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@ globals:
 rules:
   no-shadow: 0
   arrow-body-style: 0
+  no-mixed-operators: 0
   no-underscore-dangle: 0
   class-methods-use-this: 0
   react/prop-types: 0
