--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "file-loader": "^0.11.2",
     "happypack": "^4.0.0-beta.5",
     "image-webpack-loader": "^3.4.2",
+    "morgan": "^1.8.2",
     "nib": "^1.1.2",
     "nodemon": "^1.11.0",
     "nokit": "^0.25.1",
