--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "faker": "^4.1.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "mysql2": "^1.4.2",
+    "sequelize": "^4.11.3",
     "yargs": "^8.0.2"
   }
 }
